manifests/LBV3/client/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lbv3-client
  namespace: lbv3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lbv3-client
  template:
    metadata:
      labels:
        app: lbv3-client
    spec:
      containers:
        - name: lbv3-client
          image: abdoabuharrus/lbv3.0:latest
          ports:
            - containerPort: 84
