manifests/LBV3/client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lbv3-client-svc
  namespace: lbv3
spec:
  selector:
    app: lbv3-client
  ports:
    - port: 80
      targetPort: 84
